# BM1390GLV-ZTR-I2C

./: .gitignore  CMakeLists.txt  OPIS_PRAC.md  README.md
data/: 222.txt  data-format.txt
include/: BM1390GLV-ZTR.h  i2c.h  main.h  sensor_simulator.hpp
source/: BM1390GLV-ZTR.c  i2c.c  main.c  sensor_simulator.cpp
